# torch-similarity-search

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_faiss_e2e.py  test_faiss_ivf_pq.py  test_flat.py  test_ivf_flat.py  test_ivf_pq.py
torch_similarity_search/: __init__.py
torch_similarity_search/converters/: faiss_converter.py
torch_similarity_search/indexes/: __init__.py  base.py  flat.py  ivf_flat.py  ivf_pq.py
torch_similarity_search/utils/: __init__.py  distance.py
