[project]
name = "torch-similarity-search"
version = "0.0.1"
description = "PyTorch-native similarity search: convert FAISS indexes to nn.Module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "faiss-gpu-cu12>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.3",
    "pytest>=7.0",
    "ruff>=0.14.10",
]
